--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="header">
@@ -14,7 +15,30 @@
   <main>
     <section class="Mamur">
       <div class="container">
-        
+          <h2 class="sec__title">Membership has its benefits</h2>
+          <p class="sec__txt">You help your clients build their business with Mailchimp. So we designed a community to help you grow yours, in your own unique way.</p>
+          <div class="all__groups">
+          <div class="mamur__groups">
+            <img src="img/Mailchimp/4.png" alt="" class="img__mm">
+            <p class="txt__mm">Grow your business</p>
+            <p class="mm__txt">Find more clients and earn rewards.</p>
+          </div>
+          <div class="mamur__groups">
+            <img src="img/Mailchimp/3.png" alt="" class="img__mm">
+            <p class="txt__mm">Expand your expertise</p>
+            <p class="mm__txt">With Mailchimp & Co, you get access to exclusive tips and training.</p>
+          </div>
+          <div class="mamur__groups">
+            <img src="img/Mailchimp/2.png" alt="" class="img__mm">
+            <p class="txt__mm">Simplify client work</p>
+            <p class="mm__txt">Get Mailchimp tools designed just for freelancers and agencies like you.</p>
+          </div>
+          <div class="mamur__groups">
+            <img src="img/Mailchimp/1.png" alt="" class="img__mm">
+            <p class="txt__mm">Get insider perks</p>
+            <p class="mm__txt">From inspiring events to first looks at new features, we’ve got you covered.</p>
+          </div>
+        </div>
       </div>
     </section>
     <section class="Samandar">
